vlib/v/checker/tests/struct_field_with_default_err.vv
struct Dummy<T> {
	arbitrary_field T = T{}
}

fn main() {}
